[package]
name = "certasset"
version = "0.0.1"
description = "Created with Anchor"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "certasset"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
spl-token-2022 = "0.6.1"
